--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,6 +17,24 @@
     margin: 25px;
 }
 
+p {
+    font-size: 1.5rem;
+}
+
+.create {
+    display: flex;
+
+    font-size: 5rem;
+    border-radius: 50%;
+    background-color: grey;
+    text-align: center;
+    width: 75px;
+    height: 75px;
+
+    align-items: center;
+    justify-content: center;
+}
+
 
 /*  */
 
@@ -33,8 +51,13 @@
     grid-area: lists;
 }
 
+.lists div {
+    margin-bottom: 20px;
+}
+
 .list-contents {
     grid-area: list-contents;
+    overflow: auto;
 }
 
 .todo {
@@ -42,7 +65,7 @@
     justify-content: space-between;
     border: 1px black solid;
     padding: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .todo-2 {
